lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exec_approval_history_decision_aborted_multiline.snap
---
source: lib/libui/chatwidget/tests.rs
expression: lines_to_single_string(&aborted_multi)
---
✗ You canceled the request to run echo line1 ...
