lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: lib/libui/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved chaos to run echo hello world this time
