lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exec_approval_modal_exec.snap
---
source: lib/libui/chatwidget/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 13 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell gpt-5.4-codex what to do differently (esc)                    ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: White, bg: Black, underline: Reset, modifier: BOLD,
        x: 46, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: White, bg: Black, underline: Reset, modifier: ITALIC,
        x: 73, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: White, bg: Black, underline: Reset, modifier: ITALIC,
        x: 7, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Rgb(137, 180, 250), bg: Black, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Rgb(205, 214, 244), bg: Black, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 21, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 10, fg: Gray, bg: Black, underline: Reset, modifier: DIM,
        x: 59, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 8, y: 12, fg: Gray, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 12, fg: Gray, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
