lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exec_begin_restores_working_status.snap
---
source: lib/libui/chatwidget/tests.rs
assertion_line: 3803
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
"› Ask FreeChaOS to do anything                                                  "
"                                                                                "
"  ? for shortcuts · Default                                  100% context left  "
