lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exec_unknown_end_with_active_exploring_cell.snap
---
source: lib/libui/chatwidget/tests.rs
expression: snapshot
---
History:
• Ran echo repro-marker
  └ repro-marker

Active:
• Exploring
  └ Read null
