lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
