lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
