lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
