lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt
