lib/libui/chatwidget/snapshots/libui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
